# astro2025S02-GRB

./: .gitignore  README.md  Spectral_Analysis_Tutorial.ipynb  analisis_cspec_n3.ipynb  analisis_espectral_multiple.ipynb  analisis_espectral_principal.ipynb  analisis_espectral_simple.ipynb  analisis_espectral_simple_v2.ipynb  bibliography.bib  cstat_multicomponente.csv  devenv.nix  grb.tex  pyproject.toml  spectral_analysis.py  spectral_analysis_2.py  spectral_evolution_bn090926181_1-20s_0.5s_duration.csv  spectral_evolution_bn090926181_1-20s_2s_duration.csv  v2_spectral_evolution_bn090926181_1-20s_1s_duration.csv  v2_spectral_evolution_bn090926181_1-20s_2s_duration.csv
datos/090424592/: glg_cspec_b0_bn090424592_v00.pha  glg_cspec_b1_bn090424592_v00.pha  glg_cspec_b1_bn090424592_v00.rsp2  glg_cspec_n7_bn090424592_v00.pha  glg_cspec_n7_bn090424592_v00.rsp2  glg_cspec_n8_bn090424592_v00.pha  glg_cspec_n8_bn090424592_v00.rsp2  glg_cspec_nb_bn090424592_v00.pha  glg_cspec_nb_bn090424592_v00.rsp2
docs/: fitting.tex
tutoriales/: Fermi_GBM_PHAII_Data_Tutorial.ipynb  Fermi_GBM_TTE_Data_Tutorial.ipynb
