[project]
name = "astrogrb"
version = "0.2.0"
description = ""
authors = [
    {name = "bridleiva",email = "wham-stride-sulk@duck.com"}
]
license = {text = "AGPL-v3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astro-gdt (>=2.2.0,<3.0.0)",
    "astro-gdt-fermi (>=2.2.0,<3.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]

